# lambeq

./: .buildinfo  .gitignore  .gitmodules  CONTRIBUTING.html  README.md  UnitaryHack_optimizer_challenge.ipynb  advanced.html  bibliography.html  cli.html  discopy.html  genindex.html  glossary.html  index.html  install.sh  installation.html  lambeq.ansatz.html  lambeq.backend.html  lambeq.bobcat.html  lambeq.ccg2discocat.html  lambeq.core.html  lambeq.html  lambeq.pregroups.html  lambeq.reader.html  lambeq.rewrite.html  lambeq.text2diagram.html  lambeq.tokeniser.html  lambeq.training.html  manual-training.html  manual_training.html  models.html  modules.html  nlp-class.html  nlp-data.html  nlp-intro.html  nlp-ml.html  nlp-refs.html  notebooks.html  objects.inv  package-api.html  parameterise.html  (+18 more)
.github/workflows/: build-docs  build_test.yml  clear-target-files  docs.yml
_code/: discocat.html  discocat.ipynb  extend-lambeq.html  extend-lambeq.ipynb  monoidal.html  monoidal.ipynb  parameterise.html  parameterise.ipynb  rewrite.html  sentence-input.html  sentence-input.ipynb  trainer-classical.html  trainer-hybrid.html  trainer-hybrid.ipynb  trainer-quantum.html  trainer-quantum.ipynb  trainer_classical.html  trainer_classical.ipynb  trainer_hybrid.html  trainer_hybrid.ipynb  trainer_quantum.html  trainer_quantum.ipynb  training-symbols.html  training-symbols.ipynb  training-usecase.html  training-usecase.ipynb
_downloads/10b1d553703010aa8d7659be17711de9/: rewrite.ipynb
_images/: inheritance-01ebe6d807fe2be2f680bea218c396a85a754b38.png.map  inheritance-08acc5ce09d2c916d67cd46d936a3825a73de1bd.png.map  inheritance-3b0d9a8578a5a23d5fbefce4626401411957cf4a.png.map  inheritance-3b3d917dc6c04f67162987aa2b89a134ea942257.png.map  inheritance-3ba417cb6a9aeaca682e33eb3b323b3b32750bd4.png.map  inheritance-3f6fe5830969546833e4b02fa54cfe187b51eb17.png.map  inheritance-603f14518ff9845278679f1741284804c0b58fe6.png.map  inheritance-772236583be7048ad2f6c2b65587b37ef831292e.png.map  inheritance-794ee73da951aa37c9c0fcfbe2a243bf74252277.png.map  inheritance-7eb6a1fa52394909325045563f26b4ac22263072.png.map  inheritance-8c9df08c30310d085dd943ae0b4237299b23b886.png.map  inheritance-92dc943fb1edb6ead8d6c16bdf92728b17374fba.png.map  inheritance-9991111ba467a7cf69924c2a7151815cfa3104a8.png.map  inheritance-a37262e7fe14a6108221bc2243f28375d7ffadc8.png.map  inheritance-a389abbe10796329cdf876551748217ab5f4ecf7.png.map  inheritance-a5344a9cf6a9356a5f4b4b798947d6058e6e6681.png.map  inheritance-adbc7c2caa3c28f9aa301cf38590aca2a8212fae.png.map  inheritance-b9f7b35603c2a1d1f190423d49ec85a50fc6caee.png.map  inheritance-ba28d51eeb9a16fec485c5968f8031297a69901e.png.map  inheritance-bc9a597e766fd70ba23fa881d6905e805ce5713c.png.map  inheritance-c0db3320bd7606c4ff85484132ac02f7eb5a01ea.png.map  inheritance-cf15dbf2da4bf39a80eeb62fb550b1457ca2442c.png.map  inheritance-ef1850f047b10f208778a80f38ee6b0af07f3723.png.map
_modules/: index.html
_sources/: CONTRIBUTING.rst.txt  advanced.rst.txt  bibliography.rst.txt  cli.rst.txt  discopy.rst.txt  glossary.rst.txt  index.rst.txt  installation.rst.txt  lambeq.backend.rst.txt  lambeq.ccg2discocat.rst.txt  lambeq.training.rst.txt  models.rst.txt  nlp-class.rst.txt  nlp-data.rst.txt  package-api.rst.txt  parsing.rst.txt  pipeline.rst.txt  release-notes.rst.txt  release_notes.rst.txt  rewrite.rst.txt  root-api.rst.txt  string-diagrams.rst.txt  string_diagrams.rst.txt  training.rst.txt  uml-diagrams.rst.txt  use-cases.rst.txt
_static/: documentation_options.js  index.global.js  nav-config.js  styles.css  tailwind.css  tokens.css
contrib/: convert_discopy_to_lambeq.py  download_depccg_model.py
docs/: CONTRIBUTING.rst  Makefile  advanced.rst  bibliography.rst  clean_notebooks.py  cli.rst  conf.py  discopy.rst  extract_code_cells.py  glossary.rst  index.rst  installation.rst  lambeq.ansatz.rst  lambeq.backend.rst  lambeq.bobcat.rst  lambeq.core.rst  lambeq.pregroups.rst  lambeq.reader.rst  lambeq.rewrite.rst  lambeq.rst  lambeq.text2diagram.rst  lambeq.tokeniser.rst  manual-training.rst  manual_training.rst  models.rst  modules.rst  nlp-data.rst  nlp-intro.rst  nlp-ml.rst  nlp-refs.rst  notebooks.rst  package-api.rst  parameterise.rst  parsing.rst  pipeline.rst  release-notes.rst  release_notes.rst  requirements.txt  sentence_input.rst  string_diagrams.rst  (+4 more)
examples/: ccg2discocat.html  ccg2discocat.ipynb  circuit.html  classical-pipeline.html  classical_pipeline.html  classical_pipeline.ipynb  doc_tutorial.html  parser.html  parser.ipynb  pennylane.html  pennylane.ipynb  quantum-pipeline-jax.html  quantum-pipeline.html  quantum_pipeline.html  quantum_pipeline.ipynb  quantum_pipeline_jax.html  quantum_pipeline_jax.ipynb  quantum_pipeline_tket.html  quantum_pipeline_tket.ipynb  reader.html  reader.ipynb  rewrite.html  rewrite.ipynb  rotosolve-optimizer.html  rotosolve-optimizer.ipynb  rotosolve_optimizer.html  rotosolve_optimizer.ipynb  tensor.html  tensor.ipynb  tokenisation.html  tokenisation.ipynb  training.html  tree-reader.html  tree_reader.html  tree_reader.ipynb  unk-words.html
lambeq/: __init__.py  ansatz.py  circuit.py  cli.py  reader.py  rewrite.py  tensor.py  typing.py  version.pyi
mithun/: README.md
puml/: README.html
tests/: test_bobcat.py  test_circuit.py  test_cli.py  test_discocirc_reader.py  test_drawing.py  test_pregroups.py  test_reader.py  test_rewrite.py  test_rewrite_diagram.py  test_symbol.py  test_tensor.py  test_text_printer.py  test_tokeniser.py  test_utils.py
tutorials/: discocat.html  discocat.ipynb  extend-lambeq.html  extend-lambeq.ipynb  monoidal.html  monoidal.ipynb  parameterise.html  parameterise.ipynb  rewrite.html  rewrite.ipynb  sentence-input.html  sentence-input.ipynb  trainer-classical.html  trainer-classical.ipynb  trainer-hybrid.html  trainer-hybrid.ipynb  trainer-quantum.html  trainer-quantum.ipynb  trainer_classical.html  trainer_classical.ipynb  trainer_hybrid.html  trainer_hybrid.ipynb  trainer_quantum.html  trainer_quantum.ipynb  training-symbols.html  training-symbols.ipynb  training-usecase.html  training-usecase.ipynb
(+411 files in other folders)
