[metadata]
name = lambeq
desciption = A QNLP toolkit
long_description = file: README.md
long_description_content_type = text/markdown
author = Cambridge Quantum QNLP team
author_email = lambeq-support@cambridgequantum.com
license = Apache-2.0
license_files = file: LICENSE.md

[options]
packages = lambeq, lambeq.ccg2discocat, lambeq.core
install_requires =
    discopy >= 0.3.7.1
    pytket >= 0.10.0
    tensornetwork
python_requires = >=3.7

[options.extras_require]
all =
    depccg == 1.1.0
        chainer <= 6.0.0  # hack for pip to behave when installing depccg
    jax
    jaxlib
    noisyopt
    torch

depccg =
    depccg == 1.1.0
        chainer <= 6.0.0  # hack for pip to behave when installing depccg

test =
    coverage[toml]
    pytest
