[metadata]
name = lambeq
description = A QNLP toolkit
long_description = file: README.md
long_description_content_type = text/markdown
author = Cambridge Quantum QNLP team
author_email = lambeq-support@cambridgequantum.com
license = Apache-2.0
license_files = file: LICENSE
url = https://cqcl.github.io/lambeq
download_url = https://pypi.org/project/lambeq
project_urls =
    Source Code = https://github.com/CQCL/lambeq
keywords =
    category theory
    ccg
    circuits
    combinatory categorial grammar
    diagrams
    discocat
    language
    linguistics
    natural language processing
    nlp
    qnlp
    quantum
    quantum computing
    quantum natural language processing
    quantum nlp
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering

[options]
packages =
    lambeq
    lambeq.ansatz
    lambeq.text2diagram
    lambeq.bobcat
    lambeq.core
    lambeq.pregroups
    lambeq.rewrite
    lambeq.tokeniser
    lambeq.training
install_requires =
    discopy >= 0.4.1
    jinja2 < 3.1.0  # TODO: Remove when nbcovert is fixed
    pytket >= 0.19.2
    pyyaml
    spacy >= 3.0
    tensornetwork
    torch >= 1.10.1
    transformers
python_requires = >=3.8

[options.extras_require]
extras =
    jax
    jaxlib
    noisyopt
    pytket-qiskit >= 0.21.0
    tensorboard >= 2.7.0
    tqdm

test =
    coverage[toml]
    pytest

[options.entry_points]
console_scripts =
    lambeq = lambeq.cli:main
