[metadata]
name = lambeq
description = A QNLP toolkit
long_description = file: README.md
long_description_content_type = text/markdown
author = Cambridge Quantum QNLP team
author_email = lambeq-support@cambridgequantum.com
license = Apache-2.0
license_files = file: LICENSE
url = https://cqcl.github.io/lambeq
download_url = https://pypi.org/project/lambeq
project_urls =
    Source Code = https://github.com/CQCL/lambeq
keywords =
    category theory
    ccg
    circuits
    combinatory categorial grammar
    diagrams
    discocat
    language
    linguistics
    natural language processing
    nlp
    qnlp
    quantum
    quantum computing
    quantum natural language processing
    quantum nlp
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering

[options]
packages =
    lambeq
    lambeq.ansatz
    lambeq.text2diagram
    lambeq.bobcat
    lambeq.core
    lambeq.pregroups
    lambeq.rewrite
    lambeq.tokeniser
    lambeq.training
install_requires =
    discopy >= 1.1.4
    pytket >= 0.19.2
    pyyaml
    spacy >= 3.0
    tensornetwork
    torch >= 1.12.1
    transformers
python_requires = >=3.9

[options.extras_require]
extras =
    jax
    jaxlib
    pennylane >= 0.29.1
    pennylane-honeywell
    pennylane-qiskit
    pytket-qiskit >= 0.21.0
    tensorboard >= 2.7.0
    tqdm

test =
    coverage[toml]
    pytest

[options.entry_points]
console_scripts =
    lambeq = lambeq.cli:main

[flake8]
count = True
statistics = True

max-doc-length = 72

ignore =
    # The default list except for W504 (line break after binary operator)
    E121,E123,E126,E226,E24,E704,W503
extend-ignore =
    # Also ignore E203 (whitespace before ‘,’, ‘;’, or ‘:’)
    E203
per-file-ignores =
    # Ignore missing copyright notices and import misordering in init files
    */__init__.py:C801,I100,I101,I202

enable-extensions =
    # Check for missing copyright notices
    C801
copyright-check = True

# options for import order checks
application-import-names = lambeq
import-order-style = google
